--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -17,53 +17,42 @@ Globals
 
 // Loading Google Fonts
 @font-face {
-  font-family: 'Merriweather';
+  font-family: 'Bitter';
   font-style: normal;
-  font-weight: 300;
-  src: local('Merriweather Light'), local('Merriweather-Light'), url(http://fonts.gstatic.com/s/merriweather/v7/ZvcMqxEwPfh2qDWBPxn6nmB7wJ9CoPCp9n30ZBThZ1I.woff) format('woff');
+  font-weight: 400;
+  src: local('Bitter-Regular'), url(http://fonts.gstatic.com/s/bitter/v7/2PcBT6-VmYhQCus-O11S5-vvDin1pK8aKteLpeZ5c0A.woff) format('woff');
 }
 @font-face {
-  font-family: 'Merriweather';
+  font-family: 'Bitter';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Bitter-Italic'), url(http://fonts.gstatic.com/s/bitter/v7/eMS0tViDqryBl0EG1pqFZXYhjbSpvc47ee6xR_80Hnw.woff) format('woff');
+}
+@font-face {
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 700;
-  src: local('Merriweather Bold'), local('Merriweather-Bold'), url(http://fonts.gstatic.com/s/merriweather/v7/ZvcMqxEwPfh2qDWBPxn6nhAPw1J91axKNXP_-QX9CC8.woff) format('woff');
-}
-@font-face {
-  font-family: 'Merriweather';
-  font-style: italic;
-  font-weight: 300;
-  src: local('Merriweather Light Italic'), local('Merriweather-LightItalic'), url(http://fonts.gstatic.com/s/merriweather/v7/EYh7Vl4ywhowqULgRdYwIKG6KSkCb3wBFlS6Qx4Mm8U.woff) format('woff');
-}
-@font-face {
-  font-family: 'Titillium Web';
-  font-style: normal;
-  font-weight: 900;
-  src: local('Titillium WebBlack'), local('TitilliumWeb-Black'), url(http://fonts.gstatic.com/s/titilliumweb/v4/anMUvcNT0H1YN4FII8wpr-LKzNf-KVGBce62FCkcLKE.woff) format('woff');
+  src: local('Montserrat-Bold'), url(http://fonts.gstatic.com/s/montserrat/v5/IQHow_FEYlDC4Gzy_m8fcnbFhgvWbfSbdVg11QabG8w.woff) format('woff');
 }
 
 
 @mixin body-font-regular {
-    font-family: 'merriweather', serif;
+    font-family: 'bitter', serif;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 @mixin body-font-italic {
-    font-family: 'merriweather', serif;
+    font-family: 'bitter', serif;
     font-style: italic;
-    font-weight: 300;
+    font-weight: 400;
 }
 
-@mixin body-font-bold {
-    font-family: 'merriweather', serif;
-    font-style: normal;
-    font-weight: 700;
-}
 
 @mixin headline-font {
-    font-family: 'titillium web', helvetica, verdana, sans-serif;
+    font-family: 'montserrat', helvetica, verdana, sans-serif;
     font-style: normal;
-    font-weight: 900;
+    font-weight: 700;
 }
 
 // Site Variables
